Attempt to add chatroom user location on map

--- a/app/src/main/res/layout/fragment_chatroom_details.xml
+++ b/app/src/main/res/layout/fragment_chatroom_details.xml
@@ -29,6 +29,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+
+    <ImageView
+        android:id="@+id/ivMap"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:background="@drawable/background_button_circular"
+        android:padding="8dp"
+        android:src="@drawable/ic_location"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/tvLeaveChatroom"
         android:layout_width="wrap_content"
